[css] avoid whitespace below moodboard

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -76,6 +76,10 @@ main {
   padding: 0;
 }
 
+.moodboard main { // revert to avoid whitespace below moodboard
+  min-height: 0;
+}
+
 .grid__image {
   width: 100%;
   height: 100%;
